# identity-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/auth/: api.py  service.py
app/core/: database.py  dependencies.py  exceptions.py  jwt_keys.py  security.py  state_manager.py
app/social/: api.py  dto.py  model.py  persistence.py
app/social/providers/: google.py
app/sso/: api.py  service.py
app/sso/templates/: login.html
app/user/: api.py  di.py  dto.py  model.py  persistence.py  service.py
migrations/: env.py
migrations/versions/: 107fbfb7cbaa_initial_migration_user_auth_social_sso_.py
